src/objects/Contact_Correlation__c.object
<CustomObject>
    <description>Global: Object used to store many IDs for a single contact. Can be used to store integration IDs or legacy IDs</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Global: The Contact that the ID relates to</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Correlation</relationshipLabel>
        <relationshipName>Contact_Correlation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_Field_Name__c</fullName>
        <description>Used where the Source system holds more than one ID for each contact</description>
        <label>External ID Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>The ID for the contact in an external system</description>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System__c</fullName>
        <description>The Name of the source External System</description>
        <label>External System</label>
        <picklist>
            <controllingField>Market__c</controllingField>
            <picklistValues>
                <fullName>Ocean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Socretes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>The market that supplied the ID</description>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contact Correlation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>DM_Identifier__c</columns>
        <columns>External_ID__c</columns>
        <columns>External_ID_Field_Name__c</columns>
        <columns>External_System__c</columns>
        <columns>Market__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>Contact Correlation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Correlation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>